# mac-explorer

./: Cargo.toml  mac explorer logo
.github/workflows/: build.yml
src/: actions.rs  app.rs  files.rs  main.rs  tab.rs  tabviewer.rs  zip.rs
