[package]
name = "mac-explorer"
version = "0.1.0"
edition = "2021"


[dependencies]
egui = "0.29"
egui_extras = "0.29"
egui_dock = "0.14"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts", 
    "glow",          
    "persistence",   
] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4"