[package]
name = "mac-explorer"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "mac-explorer"
identifier = "com.niklasnordkamp.macexplorer"


[dependencies]
egui = "0.29"
egui_extras = "0.29"
egui_dock = "0.14"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts", 
    "glow",          
    "persistence",   
] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
clipboard = "0.5.0"
walkdir = "2.5.0"
anyhow = "1.0.92"
zip = { version = "2.2.0", default-features = false, features = ["deflate"]}
zip-extract = { version = "0.2.1", default-features = false}